feat: Implement initial API Gateway and Config Server setup with Eureka discovery and basic Auth Service configuration.

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8888
 spring.application.name=config-server
+
+# Connect to Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Use Git repository for configuration
+spring.cloud.config.server.git.uri=https://github.com/sintayehu-dev/gyt_config_server.git
+spring.cloud.config.server.git.default-label=main
+spring.cloud.config.server.git.clone-on-start=true
