feat: Introduce auth-service with Eureka discovery and API Gateway integration.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 server.port=8080
 spring.application.name=api-gateway
-
 # Eureka discovery
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+management.endpoints.web.exposure.include=*
+
+#rout for auth service
+spring.cloud.gateway.routes[0].id=auth-service
+spring.cloud.gateway.routes[0].uri=lb://auth-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+
 
 # Enable discovery locator
 spring.cloud.gateway.discovery.locator.enabled=true
