--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=9191
 spring.application.name=auth-service
 spring.config.import=optional:configserver:http://localhost:8888
+
+# JWT Configuration
+jwt.secret=mySecretKeyForJWTTokenGenerationThatIsAtLeast256BitsLong
+jwt.expiration=86400000
