feat: Implement API Gateway with JWT authentication, role-based authorization, Eureka discovery, and global exception handling.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.application.name=api-gateway
 # Eureka discovery
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+# JWT Configuration (must match Auth Service)
+jwt.secret=mySecretKeyForJWTTokenGenerationThatIsAtLeast256BitsLong
+
 management.endpoints.web.exposure.include=*
 
 #rout for auth service
