feat: Implement JWT-based security for auth service and API Gateway with role-based access control.

--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -8,12 +8,10 @@ jwt.secret=mySecretKeyForJWTTokenGenerationThatIsAtLeast256BitsLong
 
 management.endpoints.web.exposure.include=*
 
-#rout for auth service
-spring.cloud.gateway.routes[0].id=auth-service
-spring.cloud.gateway.routes[0].uri=lb://auth-service
-spring.cloud.gateway.routes[0].predicates[0]=Path=/auth/**
+# Routes Configuration
+spring.cloud.gateway.server.webflux.routes[0].id=auth-service
+spring.cloud.gateway.server.webflux.routes[0].uri=lb://AUTH-SERVICE
+spring.cloud.gateway.server.webflux.routes[0].predicates[0]=Path=/auth/**
 
-
-# Enable discovery locator
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Config Server
+spring.config.import=optional:configserver:http://localhost:8888/
